--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,39 @@
 /* ===== CSS Reset ===== */
-*{margin:0;padding:0;box-sizing:border-box}html,body{height:100%;
-font-family:sans-serif;line-height:1.5;-webkit-font-smoothing:antialiased;
+*{margin:0;padding:0;box-sizing:border-box}html,body{height:100%;line-height:1.5;-webkit-font-smoothing:antialiased;
 -moz-osx-font-smoothing:grayscale}img,picture,video,canvas,svg{display:block;max-width:100%}
 input,button,textarea,select{font:inherit}a{text-decoration:none;padding:0;color:inherit}
 ul,ol{list-style:none}button{background:none;border:none;cursor:pointer}
 table{border-collapse:collapse;border-spacing:0}
+
+@font-face {
+    font-family: "Poppins";
+    src: url(../fonts/Poppins-Regular.ttf) format("truetype");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Poppins";
+    src: url(../fonts/Poppins-Medium.ttf) format("truetype");
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Poppins";
+    src: url(../fonts/Poppins-SemiBold.ttf) format("truetype");
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: "Poppins";
+    src: url(../fonts/Poppins-Bold.ttf) format("truetype");
+    font-weight: 700;
+}
+
+
+body {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+}
 
 .section__intro {
     border-bottom-left-radius: 165px;
@@ -15,7 +44,6 @@ table{border-collapse:collapse;border-spacing:0}
     background-repeat: no-repeat;
     width: 100%;
     height: 950px;
-    position: relative;
     z-index: 1;
 }
 
@@ -30,7 +58,7 @@ table{border-collapse:collapse;border-spacing:0}
 }
 
 .header {
-    margin-bottom: 300px;
+    margin-bottom: 280px;
     position: relative;
 }
 
@@ -72,6 +100,8 @@ table{border-collapse:collapse;border-spacing:0}
 }
 
 .nav__list__item a {
+    font-family: "Poppins", sans-serif, Arial;
+    font-weight: 400;
     display: inline-block;
     padding: 30px 15px;
     color: white;
@@ -100,6 +130,16 @@ table{border-collapse:collapse;border-spacing:0}
 
 .nav__list__item-active::after {
     transform: scaleX(1);
+}
+
+.intro__title__container {
+    max-width: 540px;
+}
+
+.intro__title {
+    font-size: 54px;
+    line-height: 1.2;
+    color: #ffffff;
 }
 
 
