--- a/css/styles.css
+++ b/css/styles.css
@@ -46,12 +46,14 @@ body {
     width: 100%;
     height: 950px;
     z-index: 1;
+    margin-bottom: 130px;
 }
 
 .section__intro::before {
     position: absolute;
     content: '';
     background-color: rgba(56, 66, 77, 0.24);
+    border-bottom-left-radius: 165px;
     width: 100%;
     height: 100%;
     left: 0;
@@ -59,7 +61,7 @@ body {
 }
 
 .header {
-    z-index: 500;
+    z-index: 9999;
     position: absolute;
     width: 100%;
     color: white;
@@ -68,7 +70,7 @@ body {
 
 .header-sticky {
     position: fixed;
-    z-index: 1000;
+    z-index: 9999;
     background: #fff;
     color: #000;
     transition: all 0.3s ease-out 0s;
@@ -206,6 +208,36 @@ body {
     opacity: 0;
 }
 
+/* SECTION ABOUT */
 
+.section__about {
+    display: flex;
+}
+
+.about__image {
+    flex: 0 1 50%;
+    background-image: url("../img/about_image.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 500px;
+    border-top-right-radius: 220px;
+}
+
+.section__about__container {
+    flex: 0 1 50%;
+    display: flex;
+    align-items: center;
+}
+
+.about__content {
+    flex: 0 1 50%;
+    padding-left: 20px;
+}
+
+.stats__container {
+    border: 2px solid red;
+    height: 500px;
+}
 
 
