section about fixing

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,17 @@ body {
     line-height: 24px;
 }
 
+body h1, h2, h3, h4, h5, h6 {
+    color: #38424D;
+}
+
+body p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #747E88;
+}
+
 .section__intro {
     border-bottom-left-radius: 165px;
     position: relative;
@@ -62,7 +73,7 @@ body {
 
 .header {
     z-index: 9999;
-    position: absolute;
+    position: fixed;
     width: 100%;
     color: white;
     transition: all 0.3s ease-out 0s;
@@ -72,7 +83,7 @@ body {
     position: fixed;
     z-index: 9999;
     background: #fff;
-    color: #000;
+    color: #222;
     transition: all 0.3s ease-out 0s;
 }
 
@@ -161,6 +172,7 @@ body {
     line-height: 1.2;
     margin-bottom: 30px;
     animation-delay: 0s;
+    color: #ffffff;
 }
 
 .intro__title span {
@@ -171,6 +183,7 @@ body {
     margin-bottom: 45px;
     font-size: 18px;
     animation-delay: 0.2s;
+    color: #ffffff;
 }
 
 .intro__btn {
@@ -211,33 +224,59 @@ body {
 /* SECTION ABOUT */
 
 .section__about {
-    display: flex;
+    position: relative;
+    min-height: 600px;
+    overflow: hidden;
 }
 
 .about__image {
-    flex: 0 1 50%;
-    background-image: url("../img/about_image.jpg");
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 48%;
+    height: 100%;
+    background-image: url(../img/about_image.jpg);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
-    min-height: 500px;
     border-top-right-radius: 220px;
 }
 
 .section__about__container {
-    flex: 0 1 50%;
+    max-width: 1140px;
+    margin: 0 auto;
+    height: 100%;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
 
-.about__content {
-    flex: 0 1 50%;
-    padding-left: 20px;
+.section__about__content {
+    width: 50%;
+    padding-left: 40px;
 }
 
 .stats__container {
     border: 2px solid red;
     height: 500px;
+}
+
+.about__title {
+    font-size: 44px;
+    font-weight: 600;
+    line-height: 1.2;
+    margin-bottom: 20px;
+}
+
+.about__title span {
+    color: #EEC41E;
+}
+
+.section__about__content p {
+    margin-bottom: 45px;
+}
+
+.section__about__content button {
+    margin-bottom: 30px;
 }
 
 
